# mdict-cpp

./: .gitignore  CMakeLists.txt
encode/: base64.h
